@@ -1,14 +1,21 @@
 {
-  "timestamp" : "2022-11-29T16:01:33Z",
+  "timestamp" : "2022-12-07T16:00:35Z",
   "count_outdated" : 93,
   "uniques_outdated" : 79,
-  "count" : 94,
-  "uniques" : 80,
+  "count" : 96,
+  "uniques" : 81,
   "clones" : [
     {
       "timestamp": "2022-11-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
