@@ -1,3 +1,11 @@
+2022-12-07T16:00:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640585236 # 682
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 79 93 / 80 94
+* notice: next accum: outdated-unq outdated-all / unq all: 79 93 / 81 96
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-12-07]
+
 2022-11-29T16:01:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3575806466 # 658
 * notice: last 14d: unq all: 1 1
